add media db storage.

--- a/code/src/cms/CMakeLists.txt
+++ b/code/src/cms/CMakeLists.txt
@@ -12,7 +12,8 @@ set(SRCS
   notes_manager.cpp
   cms_utils.cpp
   user_db.cpp
-  download_db.cpp)
+  download_db.cpp
+  media_db.cpp)
 
 add_library(onyx_cms ${SRCS})
 strict_warning(onyx_cms)
