--- a/code/src/cms/CMakeLists.txt
+++ b/code/src/cms/CMakeLists.txt
@@ -13,7 +13,8 @@ set(SRCS
   cms_utils.cpp
   user_db.cpp
   download_db.cpp
-  media_db.cpp)
+  media_db.cpp
+  media_info_manager.cpp)
 
 add_library(onyx_cms ${SRCS})
 strict_warning(onyx_cms)
