don't need to find zlib.

--- a/code/src/dictionary/CMakeLists.txt
+++ b/code/src/dictionary/CMakeLists.txt
@@ -1,9 +1,9 @@
 
 ENABLE_QT()
 
-INCLUDE(FindZLIB)
-INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
-LINK_DIRECTORIES(${ZLIB_LIBRARY_DIRS})
+#INCLUDE(FindZLIB)
+#INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
+#LINK_DIRECTORIES(${ZLIB_LIBRARY_DIRS})
 
 
 # qstardict backend.
