refactoring DebugMsg code

--- a/code/src/base/CMakeLists.txt
+++ b/code/src/base/CMakeLists.txt
@@ -8,6 +8,7 @@ qt4_wrap_cpp(MOC_SRCS
 add_library(onyx_base ${MOC_SRCS}
   base_model.cpp
   tasks_handler.cpp
+  debug_msg.cpp
 )
 target_link_libraries(onyx_base
   onyx_data # This is added for base_model. Perhaps base_model should be in onyx_data
